[gd_scene load_steps=9 format=2]

[ext_resource path="res://demo/scenes/Dice.tscn" type="PackedScene" id=1]
[ext_resource path="res://demo/scenes/Board.tscn" type="PackedScene" id=2]
[ext_resource path="res://demo/Main.gd" type="Script" id=3]
[ext_resource path="res://demo/scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://demo/assets/dreamy_loop-1.mp3" type="AudioStream" id=5]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.415686, 0.415686, 0.415686, 1 )
roughness = 0.16

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 0.0289651, 1 )

[node name="Main" type="Spatial"]
script = ExtResource( 3 )

[node name="Dices" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.343, 0, 0 )

[node name="Dice1" parent="Dices" instance=ExtResource( 1 )]
transform = Transform( 0.708463, 0.107081, -0.697577, 0.705748, -0.107493, 0.700261, 0, -0.988423, -0.151727, -0.575187, 3.16691, 0 )

[node name="Dice2" parent="Dices" instance=ExtResource( 1 )]
transform = Transform( 0.120792, 0.582452, 0.803841, -0.102175, -0.798174, 0.593699, 0.987406, -0.153846, -0.0369011, -1.55999, 3.8054, 0 )

[node name="Dice3" parent="Dices" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, -0.233242, 0.972419, 0, -0.972419, -0.233242, -1.55999, 3.16691, 0 )

[node name="Dice4" parent="Dices" instance=ExtResource( 1 )]
transform = Transform( 0.598339, -0.326776, -0.731579, 0.801243, 0.244024, 0.546316, 0, -0.913055, 0.407836, -2.23721, 3.16691, 0 )

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 5.787, 0, 0, 0, 1, 0, 0, 0, 5.114, 0, -0.483, 0 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0122157, 0.0187068, 0.00143322 )
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0189255, 0 )
shape = SubResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.0098938, 0.844328, -0.535735, -0.0155901, 0.535827, 0.844184, 0.99983, 0, 0.0184645, -2.73482, 2.068, -0.213568 )

[node name="Board" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.487507, -0.486891 )

[node name="Fields" type="Spatial" parent="Board"]

[node name="Field1" type="Position3D" parent="Board/Fields"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.02299, 0.402287, -1.44209 )

[node name="Field2" type="Position3D" parent="Board/Fields"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.02299, 0.402287, -2.44534 )

[node name="Field3" type="Position3D" parent="Board/Fields"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.02299, 0.402287, -3.56784 )

[node name="Field4" type="Position3D" parent="Board/Fields"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0518253, 0.402287, -3.56784 )

[node name="Field5" type="Position3D" parent="Board/Fields"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0518253, 0.402287, -2.65635 )

[node name="Field6" type="Position3D" parent="Board/Fields"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0518253, 0.402287, -1.65951 )

[node name="Field7" type="Position3D" parent="Board/Fields"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0518253, 0.402287, -0.454299 )

[node name="Field8" type="Position3D" parent="Board/Fields"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0518253, 0.402287, 0.53017 )

[node name="Field9" type="Position3D" parent="Board/Fields"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0518253, 0.402287, 1.42444 )

[node name="Field10" type="Position3D" parent="Board/Fields"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0518253, 0.402287, 2.18083 )

[node name="Field11" type="Position3D" parent="Board/Fields"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0518253, 0.402287, 3.15122 )

[node name="Field12" type="Position3D" parent="Board/Fields"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0518253, 0.402287, 4.52776 )

[node name="Field13" type="Position3D" parent="Board/Fields"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.02739, 0.402287, 4.52776 )

[node name="Field14" type="Position3D" parent="Board/Fields"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.02739, 0.402287, 3.62754 )

[node name="Field15" type="Position3D" parent="Board/Fields"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.02739, 0.402287, 2.55791 )

[node name="Field16" type="Position3D" parent="Board/Fields"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.02739, 0.402287, 1.5559 )

[node name="Field17" type="Position3D" parent="Board/Fields"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.16731, 0.402287, 0.475605 )

[node name="Player" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.909822, -0.303634, -2.01113 )

[node name="MoveButton" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
text = "Move"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reroll" type="Button" parent="."]
margin_left = 1.0
margin_top = 26.0
margin_right = 50.0
margin_bottom = 46.0
text = "Reroll"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LookAt" type="Button" parent="."]
margin_left = 63.0
margin_right = 164.0
margin_bottom = 20.0
text = "Look at Player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -9.613

[connection signal="rolled" from="Dices/Dice1" to="." method="_on_dice_rolled"]
[connection signal="rolled" from="Dices/Dice2" to="." method="_on_dice_rolled"]
[connection signal="rolled" from="Dices/Dice3" to="." method="_on_dice_rolled"]
[connection signal="rolled" from="Dices/Dice4" to="." method="_on_dice_rolled"]
[connection signal="pressed" from="MoveButton" to="." method="move" binds= [ 1 ]]
[connection signal="pressed" from="Reroll" to="." method="reroll"]
[connection signal="pressed" from="LookAt" to="." method="_on_LookAt_pressed"]
